--- a/index.html
+++ b/index.html
@@ -587,10 +587,13 @@
                     <div>0</div>
                   </div>
                 </div>
-                
               </div>
-              <button class="flex">Цааш үргэлжлүүлэх
-                <img src="https://mgl.gogo.mn//newsn/v4/images/more.50d348c2.png" alt="">
+              <button class="flex">
+                Цааш үргэлжлүүлэх
+                <img
+                  src="https://mgl.gogo.mn//newsn/v4/images/more.50d348c2.png"
+                  alt=""
+                />
               </button>
             </div>
           </div>
@@ -977,6 +980,126 @@
           </div>
         </div>
       </section>
+      <div class="page3 flex">
+        <div class="page3-in flex">
+          <div class="video flex">
+            <div class="video-top flex">
+              <img
+                src="https://mgl.gogo.mn//newsn/v4/images/play-btn.12e64771.svg"
+                alt=""
+              />
+              Үзэх
+            </div>
+            <div class="video-midle flex">
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+            </div>
+            <div class="video-bottom flex">
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="flex">
+        <div class="footer-in flex">
+          <div><img src="https://mgl.gogo.mn/newsn/v4/images/gogo-logo.345096b3.png" alt=""></div>
+          <div class="footer-text flex">
+            <div class="footer-texts flex"><img class="footer-icon"  src="https://mgl.gogo.mn/newsn/v4/images/tech.a4b28dbb.png" alt="">
+            Бидний тухай</div>
+            <div class="footer-texts flex"><img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/surtalchilgaa.2f9ee07e.png" alt="">
+            Суртчилгаа байршуулах</div>
+            <div class="footer-texts flex"> <img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/surtalchilgaa.2f9ee07e.png" alt="">
+            Редакцийн ёс зүй</div>
+            <div class="footer-texts flex"> <img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/nuutslal.e823e529.png" alt="">
+              Нууцлалын бодоло
+            </div>
+            <div style="display:flex;"  > <img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/holboo.99f66db8.png" alt="">
+             Холбоо барих</div>
+          </div>
+        </div>
+      </footer>
     </div>
+
   </body>
 </html>
