--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               src="https://mgl.gogo.mn/banner_gogo/banner/2023/09/19/news-b1-1/videourl/1695084206/1170x75.png"
               alt=""
             />
+            <div class="main-img-hover"></div>
             <div class="main-texts flex">
               <div class="main-text flex">
                 <span class="main-text-meddeg flex">
@@ -1083,23 +1084,56 @@
       </div>
       <footer class="flex">
         <div class="footer-in flex">
-          <div><img src="https://mgl.gogo.mn/newsn/v4/images/gogo-logo.345096b3.png" alt=""></div>
+          <div>
+            <img
+              src="https://mgl.gogo.mn/newsn/v4/images/gogo-logo.345096b3.png"
+              alt=""
+            />
+          </div>
           <div class="footer-text flex">
-            <div class="footer-texts flex"><img class="footer-icon"  src="https://mgl.gogo.mn/newsn/v4/images/tech.a4b28dbb.png" alt="">
-            Бидний тухай</div>
-            <div class="footer-texts flex"><img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/surtalchilgaa.2f9ee07e.png" alt="">
-            Суртчилгаа байршуулах</div>
-            <div class="footer-texts flex"> <img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/surtalchilgaa.2f9ee07e.png" alt="">
-            Редакцийн ёс зүй</div>
-            <div class="footer-texts flex"> <img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/nuutslal.e823e529.png" alt="">
+            <div class="footer-texts flex">
+              <img
+                class="footer-icon"
+                src="https://mgl.gogo.mn/newsn/v4/images/tech.a4b28dbb.png"
+                alt=""
+              />
+              Бидний тухай
+            </div>
+            <div class="footer-texts flex">
+              <img
+                class="footer-icon"
+                src="https://mgl.gogo.mn/newsn/v4/images/surtalchilgaa.2f9ee07e.png"
+                alt=""
+              />
+              Суртчилгаа байршуулах
+            </div>
+            <div class="footer-texts flex">
+              <img
+                class="footer-icon"
+                src="https://mgl.gogo.mn/newsn/v4/images/surtalchilgaa.2f9ee07e.png"
+                alt=""
+              />
+              Редакцийн ёс зүй
+            </div>
+            <div class="footer-texts flex">
+              <img
+                class="footer-icon"
+                src="https://mgl.gogo.mn/newsn/v4/images/nuutslal.e823e529.png"
+                alt=""
+              />
               Нууцлалын бодоло
             </div>
-            <div style="display:flex;"  > <img class="footer-icon" src="https://mgl.gogo.mn/newsn/v4/images/holboo.99f66db8.png" alt="">
-             Холбоо барих</div>
+            <div style="display: flex">
+              <img
+                class="footer-icon"
+                src="https://mgl.gogo.mn/newsn/v4/images/holboo.99f66db8.png"
+                alt=""
+              />
+              Холбоо барих
+            </div>
           </div>
         </div>
       </footer>
     </div>
-
   </body>
 </html>
