--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
           </div>
           <div class="yariltslaga5 relative border-radius10px">
             <img
-              class="grid-img"
+              class="grid-img border-radius10px"
               src="https://mgl.gogo.mn/newsn/thumbnail/600/images/c/2023/08/309762-18082023-1692338241-579524689-DSC026741.jpg"
               alt=""
             />
