--- a/index.html
+++ b/index.html
@@ -143,11 +143,14 @@
           </div>
           <div class="main-cards flex">
             <div class="main-card flex">
-              <img
-                class="card-img"
-                src="https://mgl.gogo.mn/newsn/thumbnail/600/images/c/2023/09/310315-02092023-1693666522-334140039-21.jpg"
-                alt=""
-              />
+              <div class="zurag-out">
+                <img
+                  class="card-img"
+                  src="https://mgl.gogo.mn/newsn/thumbnail/600/images/c/2023/09/310315-02092023-1693666522-334140039-21.jpg"
+                  alt=""
+                />
+                <div class="delgerengui">delgerengui</div>
+              </div>
               <div class="card-text">
                 ТОМИЛОЛТ: Daewoo брэндийн 2023 оны 600 шинэ автобус нийтийн
                 тээврийн үйлчилгээнд явна
@@ -163,12 +166,19 @@
                 </div>
               </div>
             </div>
+            <div class="delgerengui">
+              Дэлгэрэнгүй
+              <img src="./zurag/story icon /right-arrow.png" alt="" />
+            </div>
             <div class="main-card">
-              <img
-                class="card-img"
-                src="https://mgl.gogo.mn/newsn/thumbnail/600/images/c/2023/09/311079-25092023-1695601312-629662252-Final66MGL-TJK1-1687524971-1687524971.jpg"
-                alt=""
-              />
+              <div class="zurag-out">
+                <img
+                  class="card-img"
+                  src="https://mgl.gogo.mn/newsn/thumbnail/600/images/c/2023/09/311079-25092023-1695601312-629662252-Final66MGL-TJK1-1687524971-1687524971.jpg"
+                  alt=""
+                />
+                <div class="delgerengui">delgerengui</div>
+              </div>
               <div class="card-text">
                 ТОМИЛОЛТ: Daewoo брэндийн 2023 оны 600 шинэ автобус нийтийн
                 тээврийн үйлчилгээнд явна
@@ -812,6 +822,20 @@
             <div class="hevmayg-card border-radius10px">
               <img
                 class="hevmayg-card-img border-radius10px"
+                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2023/09/310760-18092023-1695002878-982692408-minii_sanal_bolgoh_nom.jpg "
+                alt=""
+              />
+              <div class="hevmayg-card-text flex">
+                <h4>Миний санал болгох ном</h4>
+                <div class="hevmayg-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+            </div>
+            <div class="hevmayg-card border-radius10px">
+              <img
+                class="hevmayg-card-img border-radius10px"
                 src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2020/12/265740-15122020-1608019172-631762625-g11.jpg"
                 alt=""
               />
@@ -862,6 +886,23 @@
             Технологи
           </div>
           <div class="tec-cards flex">
+            <div class="tec-card border-radius10px">
+              <img
+                class="tec-card-top"
+                src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311225-28092023-1695860639-835940155-_131270503_337bb1da0f862f76f1d0dfbaa1a8078cec2fce200_201_7511_42271000x563.jpg"
+                alt=""
+              />
+              <h4>ChatGPT 2021 оноос хойших мэдээллийн сантай боллоо</h4>
+              <div class="tec-card-under flex">
+                <img src="./zurag/medee icon/share (1).png" alt=" " />
+                <div>0</div>
+                <img
+                  src="https://mgl.gogo.mn//newsn/v4/images/comment-light.bd31b019.svg"
+                  alt=""
+                />
+                <div>0</div>
+              </div>
+            </div>
             <div class="tec-card border-radius10px">
               <img
                 class="tec-card-top"
@@ -1034,8 +1075,36 @@
                   <div>0</div>
                 </div>
               </div>
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
             </div>
             <div class="video-bottom flex">
+              <div class="video-card">
+                <img
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                  alt=""
+                />
+                <h3>
+                  "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
+                  хугацааг нэг сараар сунгалаа"
+                </h3>
+                <div class="video-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
               <div class="video-card">
                 <img
                   src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
