tec hesegt hover nemev

--- a/index.html
+++ b/index.html
@@ -1131,11 +1131,17 @@
               </div>
             </div>
             <div class="tec-card border-radius10px">
-              <img
-                class="tec-card-top"
-                src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-26092023-1695714295-619787406-fe17d942-67c2-4295-86b8-10af7b954eab.jpg"
-                alt=""
-              />
+              <div class="tec-hover">
+                <img
+                  class="tec-card-top"
+                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-26092023-1695714295-619787406-fe17d942-67c2-4295-86b8-10af7b954eab.jpg"
+                  alt=""
+                />
+                <div class="delgerengui-tec">
+                  Дэлгэрэнгүй
+                  <img src="./zurag/story icon /right-arrow.png" alt="" />
+                </div>
+              </div>
               <h4>
                 “Getty Images” хиймэл оюун ашиглан зураг үүсгэдэг шинэ
                 бүтээгдэхүүнээ танилцуулна
@@ -1217,7 +1223,8 @@
             <div class="video-midle flex">
               <div class="video-card">
                 <div class="video-hover">
-                  <img class="hover-zurag"
+                  <img
+                    class="hover-zurag"
                     src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
                     alt=""
                   />
@@ -1236,10 +1243,17 @@
                 </div>
               </div>
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
@@ -1250,10 +1264,17 @@
                 </div>
               </div>
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
@@ -1264,10 +1285,17 @@
                 </div>
               </div>
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
@@ -1277,14 +1305,20 @@
                   <div>0</div>
                 </div>
               </div>
-              
             </div>
             <div class="video-bottom flex">
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
@@ -1295,10 +1329,17 @@
                 </div>
               </div>
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
@@ -1309,10 +1350,17 @@
                 </div>
               </div>
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
@@ -1323,10 +1371,17 @@
                 </div>
               </div>
               <div class="video-card">
-                <img
-                  src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
-                  alt=""
-                />
+                <div class="video-hover">
+                  <img
+                    class="hover-zurag"
+                    src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2022/12/301096-13122022-1670904893-1355198053-amarbaysgalan1.jpeg"
+                    alt=""
+                  />
+                  <div class="delgerengui-video">
+                    Дэлгэрэнгүй
+                    <img src="./zurag/story icon /right-arrow.png" alt="" />
+                  </div>
+                </div>
                 <h3>
                   "Иргэдийн амьжиргааг дэмжих хүсэлтийн дагуу самар түүх
                   хугацааг нэг сараар сунгалаа"
