--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
         </nav>
         <main>
           <div class="main-top flex">
-            <img
-              class="main-img"
-              src="https://mgl.gogo.mn/banner_gogo/banner/2023/09/19/news-b1-1/videourl/1695084206/1170x75.png"
-              alt=""
-            />
+            <div class="undag-hover">
+              <img
+                class="main-img"
+                src="https://mgl.gogo.mn/banner_gogo/banner/2023/09/19/news-b1-1/videourl/1695084206/1170x75.png"
+                alt=""
+              />
+            </div>
             <div class="main-img-hover"></div>
             <div class="main-texts flex">
               <div class="main-text flex">
@@ -1229,7 +1231,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1250,7 +1252,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1271,7 +1273,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1292,7 +1294,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1315,7 +1317,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1336,7 +1338,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1357,7 +1359,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Дэлгэрэнгүй
+                    Үнших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
