--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1252,7 +1252,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1273,7 +1273,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1294,7 +1294,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1317,7 +1317,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1338,7 +1338,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
@@ -1359,7 +1359,7 @@
                     alt=""
                   />
                   <div class="delgerengui-video">
-                    Үнших
+                    Унших
                     <img src="./zurag/story icon /right-arrow.png" alt="" />
                   </div>
                 </div>
