--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@
               </div>
             </div>
           </div>
+          <div class="none flex">
+            <button> <img
+              class="ontsloh-icon"
+              src="https://mgl.gogo.mn//newsn/v4/images/highlightnews.4812c9a7.png"
+              alt=""
+            />
+            <div class="ontsloh-medee">Онцлох мэдээ</div>
+           </button>
+            <button>
+              <img src="https://mgl.gogo.mn//newsn/v4/images/todaynews.6ba1d8b2.png" alt="">
+              шинэ
+            </button>
+            <button>
+              <img src="https://mgl.gogo.mn/newsn/v4/images/trend.43e0b806.pngs" alt="">
+              Тренд
+            </button>
+          </div>
           <div class="main-cards flex">
             <div class="main-card flex">
               <div class="zurag-out">
