--- a/index.html
+++ b/index.html
@@ -115,14 +115,16 @@
                   Г.Ганбаясгах: Бид 12 улсаас хүн худалдаалах гэмт хэргийн 400
                   гаруй хохирогчийг авчирсан
                 </h2>
-                <p class="main-under-text">
-                  “Хүйсийн тэгш эрх төв” ТББ-ын тэргүүн Г.Ганбаясгахтай ярилцав.
-                  Тэрээр 2000 оны эхэн үеэс хүн худалдаалах гэмт хэргийн талаар
-                  анхлан ярьж, анхааруулсан хүмүүсийн нэг бөгөөд 1997 оноос хойш
-                  хүүхэд, эмэгтэйчүүдийн эрхийг хамгаалах, бодлого
-                  боловсруулахад хувь нэмрээ оруулах чиглэлд тасралтгүй ажиллаж
-                  байна.
-                </p>
+                <div class="main-under">
+                  <p class="main-under-text">
+                    “Хүйсийн тэгш эрх төв” ТББ-ын тэргүүн Г.Ганбаясгахтай
+                    ярилцав. Тэрээр 2000 оны эхэн үеэс хүн худалдаалах гэмт
+                    хэргийн талаар анхлан ярьж, анхааруулсан хүмүүсийн нэг
+                    бөгөөд 1997 оноос хойш хүүхэд, эмэгтэйчүүдийн эрхийг
+                    хамгаалах, бодлого боловсруулахад хувь нэмрээ оруулах
+                    чиглэлд тасралтгүй ажиллаж байна.
+                  </p>
+                </div>
                 <div class="main-icons flex">
                   <div class="main-icon flex">
                     <img src="./zurag/nav-icons/share.png" alt="" />
@@ -134,7 +136,7 @@
                   </div>
                 </div>
               </div>
-              <div>
+              <div class="main-underimg">
                 <img
                   class="main-under-img"
                   src="https://mgl.gogo.mn/newsn/thumbnail/1000/images/c/2023/09/311048-22092023-1695374550-106685744-Ganbayasgah2023.png"
@@ -144,19 +146,26 @@
             </div>
           </div>
           <div class="none flex">
-            <button> <img
-              class="ontsloh-icon"
-              src="https://mgl.gogo.mn//newsn/v4/images/highlightnews.4812c9a7.png"
-              alt=""
-            />
-            <div class="ontsloh-medee">Онцлох мэдээ</div>
-           </button>
             <button>
-              <img src="https://mgl.gogo.mn//newsn/v4/images/todaynews.6ba1d8b2.png" alt="">
+              <img
+                class="ontsloh-icon"
+                src="https://mgl.gogo.mn//newsn/v4/images/highlightnews.4812c9a7.png"
+                alt=""
+              />
+              <div class="ontsloh-medee">Онцлох мэдээ</div>
+            </button>
+            <button>
+              <img
+                src="https://mgl.gogo.mn//newsn/v4/images/todaynews.6ba1d8b2.png"
+                alt=""
+              />
               шинэ
             </button>
             <button>
-              <img src="https://mgl.gogo.mn/newsn/v4/images/trend.43e0b806.pngs" alt="">
+              <img
+                src="https://mgl.gogo.mn/newsn/v4/images/trend.43e0b806.pngs"
+                alt=""
+              />
               Тренд
             </button>
           </div>
@@ -438,12 +447,14 @@
                     Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp
                     ашиглах боломжгүй болно
                   </h3>
-                  <p class="medee-text">
-                    Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар
-                    сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг
-                    гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн
-                    тусламжийн төвийн вэб с
-                  </p>
+                  <div class="main-under">
+                    <p class="medee-text">
+                      Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар
+                      сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг
+                      гар утаснууд дээр ажиллахаа болино. Энэ талаар
+                      WhatsApp-ийн тусламжийн төвийн вэб с
+                    </p>
+                  </div>
                   <div class="medee-undersec flex">
                     <img src="./zurag/medee icon/share (1).png" alt=" " />
                     <div>0</div>
